--- a/undersound/index.html
+++ b/undersound/index.html
@@ -413,12 +413,12 @@
     <footer>
         <nav>
             <div class="container">
-                <div class="row row-cols-1 row-cols-lg-4 justify-content-between align-items-start">
-                    <a href="" onclick="return false" class="navbar-brand col">
+                <div class="d-flex flex-wrap justify-content-between align-items-start gap-3">
+                    <a href="" onclick="return false" class="navbar-brand">
                         <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
                         <p>UnderSound</p>
                     </a>
-                    <div class="nav-container d-flex align-items-start justify-content-center col">
+                    <div class="nav-container d-flex align-items-start justify-content-center">
                         <div class="nav d-flex flex-column">
                             <h3 class="nav-title">Enlaces Rápidos</h3>
                             <ul class="navbar-nav d-flex flex-column">
@@ -428,7 +428,7 @@
                                 <li class="nav-item"><a href="#price" class="nav-link">Precios</a></li>
                             </ul>
                         </div>
-                        <div class="nav d-lex flex-column">
+                        <div class="nav d-flex flex-column">
                             <h3 class="nav-title">Otros Enlaces</h3>
                             <ul class="navbar-nav d-flex flex-column">
                                 <li class="nav-item"><a href="" onclick="return false" class="nav-link">Privacidad</a></li>
@@ -437,7 +437,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="socials d-flex align-items-center justify-content-end gap-5 col">
+                    <div class="socials d-flex align-items-center justify-content-end gap-5">
                         <a href="" onclick="return false" target="_blank" class="socials-link">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
