Add header shadow on scroll

--- a/undersound/index.html
+++ b/undersound/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md" id="navbar">
             <div class="header-container container container-fluid">
                 <a href="#" class="navbar-brand">
                     <img class="img-fluid" src="./img/logo.svg" alt="logo of undersound" width="25px">
@@ -457,6 +457,8 @@
     <a href="#" class="up-btn">
         <i class="fa-solid fa-chevron-up"></i>
     </a>
+
+    <script src="script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 
